--- a/Server/.gitignore
+++ b/Server/.gitignore
@@ -1,4 +1,18 @@
+# Node dependencies
 node_modules/
+
+# React build
+build/
+dist/
+
+# dotenv files
 .env
-.DS_Store
+.env.*
+
+# Logs
+logs/
 *.log
+
+# OS files
+.DS_Store
+Thumbs.db
