--- a/Server/.env
+++ b/Server/.env
@@ -3,7 +3,7 @@ DB_ROOT=root
 DB_HOST=127.0.0.1
 DB_NAME=FinalProject
 DB_PORT=3306
-EMAIL_USER=chanis9351@gmail.com
-EMAIL_PASS=oeli pwlm jvhi iuvt
+EMAIL_USER=s0533119351@gmail.com
+EMAIL_PASS=ifrw nimz omto xlhh
 EMAIL_TOKEN_SECRET=myverysecurekey
 JWT_SECRET=MySuperSecret
