--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "axios": "^1.9.0",
+    "html2pdf.js": "^0.10.3",
     "js-cookie": "^3.0.5",
     "react-hook-form": "^7.57.0",
     "react-router-dom": "^7.6.0"
