--- a/Server/package.json
+++ b/Server/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.21",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
