--- a/DB/package.json
+++ b/DB/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed-static": "node seedStaticTables.mjs",
+    "seed-fake": "node fakerSeed.mjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@faker-js/faker": "^9.8.0",
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7"
